# sadify-agent

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  context.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/web/: .dockerignore  .env.example  .gcloudignore  Dockerfile  package.json  (+2 more)
docs/: Google Cloud Hackathon (Req -_ SAD agent).md  Google for Startups AI Agents Challenge.md
sadify_agent/: agent.py  requirements.txt
services/api/: pyproject.toml
services/api/src/sadify_api/: __init__.py  config.py  main.py  schemas.py
services/api/src/sadify_api/agent/: __init__.py  approval.py  finalize.py  instruction.py  tools.py
services/api/src/sadify_api/routes/: __init__.py  agent.py  analysis.py  auth.py  diagnostics.py  drafts.py  drive.py  health.py  models.py  projects.py  sad.py  sources.py
services/api/src/sadify_api/services/: analysis_flow.py  analysis_state.py  auth.py  dev_tasks.py  drive_client.py  drive_repo.py  firestore_client.py  gemini_structured.py  github_issue_flow.py  github_issue_sets.py  guest_drafts.py  live_drive.py  model_catalog.py  projects.py  questionnaire_plan.py  questionnaire_slots.py  rate_limit.py  sad_flow.py  sad_markdown.py  sad_preview.py  sad_save.py  sad_synthesis.py  secret_store.py  session_state.py  slot_evidence.py  source_uploads.py  wiki_backup.py  wiki_compose.py  wiki_state.py
tests/: test_account_menu_ui.py  test_agent_scaffold.py  test_app_shell.py  test_business_file_extraction.py  test_canonical_schemas.py  test_cloud_run_deploy_files.py  test_completeness_scoring.py  test_config.py  test_diagnostics.py  test_export_generation.py  test_firestore_persistence.py  test_github_issue_relaunch_ui.py  test_local_end_to_end.py  test_logging_config.py  test_model_router.py  test_mvp_auth_session_scaffold.py  test_mvp_drive_repo_oauth_ui.py  test_mvp_guest_draft_ui.py  test_mvp_live_gemini_qna_ui.py  test_mvp_model_picker_ui.py  test_mvp_project_ui.py  test_mvp_sad_preview_it_readiness_ui.py  test_mvp_sad_save_ui.py  test_mvp_scaffold.py  test_mvp_source_upload_traceability_ui.py  test_mvp_wiki_ui.py  test_mvp_workspace_shell.py  test_project_delete_ui.py  test_relationship_linking.py  test_requirement_analysis.py  test_sad_generation.py  test_session_resume_ui.py  test_tc027_deploy_artifacts.py  test_tc034_agent_timeline_ui.py  test_tc034_github_issues_ui.py  test_wiki_markdown_renderer.py  test_wiki_verification.py
(+231 files in other folders)
