[project]
name = "sadify"
version = "0.1.0"
description = "AI system analyst agent for clarified System Analysis and Design outputs."
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.32.0",
    "streamlit>=1.57.0",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.0",
    "pypdf>=6.10.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.0",
    "pandas>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = [
    "src",
    ".",
]
testpaths = [
    "tests",
]
