[project]
name = "sadify-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "google-api-python-client>=2.130,<3",
    "google-auth>=2.30,<3",
    "google-auth-oauthlib>=1.2,<2",
    "google-cloud-firestore>=2.20,<3",
    "google-cloud-secret-manager>=2.20,<3",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.13.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "../../src",
    "../..",
]
